Fix bullet point alignment with proper list styling

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -69,19 +69,21 @@ a:hover {
 }
 
 /* List styling */
-ol {
+ol, ul {
     margin: 1em 0;
-    padding-left: 1.5em;
+    padding-left: 2em;
+    list-style-position: outside;
 }
 
-ul {
-    margin: 1em 0;
-    padding-left: 1.5em;
+li {
+    margin-bottom: 0.5em;
+    padding-left: 0.5em;
 }
 
 @media(min-width:600px){
     ol, ul {
-        margin: 2em auto;
+        margin: 2em 0;
+        padding-left: 2.5em;
     }
 }
 
